# MCP-docker-executor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  TESTING.md  pyproject.toml
examples/: claude_desktop_example.md  package_management_demo.py
src/mcp_docker_executor/: __init__.py  __main__.py  cli.py  docker_manager.py  file_manager.py  mcp_server.py  models.py  server.py
tests/: conftest.py  test_docker_manager.py  test_models.py  test_server.py
uploads/python/: 00c27906-5adb-405e-838c-dc9082901df3_metadata.json  00c27906-5adb-405e-838c-dc9082901df3_test_list_api.py  494aa534-ded2-4efe-9f98-0c3eb7cbf3a7_metadata.json  494aa534-ded2-4efe-9f98-0c3eb7cbf3a7_test_delete_api.py  52539cf4-4093-47bd-a986-14453244a7e2_metadata.json  52539cf4-4093-47bd-a986-14453244a7e2_test_info_api.py  53b6cc2b-4937-44e2-bb33-0027ce8293d9_metadata.json  53b6cc2b-4937-44e2-bb33-0027ce8293d9_test_api.py  6faa7e5f-7e75-4d9a-afb8-7ef5fab7609c_metadata.json  6faa7e5f-7e75-4d9a-afb8-7ef5fab7609c_test_exec_api.py
